+ intro background wave + Keywords/hashtags to "expertise" + Add technologies section with cards (url-shortening-api frontend mentor inspiration)
() todo : More services section (bookmark-landing-page frontend mentor inspiration)

--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Font awesome when needed -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
     <link rel="stylesheet" href="style.css">
 
     <title>Marc Z. -- Ingénieur polyvalent</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -18,49 +22,194 @@
                 <h1>Marc Z.</h1>
                 <button><i class="fas fa-bars"></i></button>
             </nav>
-        
+
             <section class="intro">
                 <img class="intro_image" src="assets/bg-home.svg" alt="circuit">
                 <div class="intro_text">
-                    <h2>Concevoir une idée</h2>
+                    <h2>Conception et Réalisation Electronique</h2>
                     <p>De l'électronique jusqu'au prototypage. L'accompagnement du projet de A à Z.</p>
                 </div>
             </section>
-    
-            <svg id="scroll-down-btn" viewBox="0 0 178 69" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" stroke-linecap="round" stroke-miterlimit="10"><path d="M162.517 42.341a2.8 2.8 0 104.032-3.887 2.8 2.8 0 00-4.032 3.887zM105.223 33.687a2.801 2.801 0 112.8-2.8c0 1.545-1.254 2.8-2.8 2.8z" fill="none" stroke="#cbab60" stroke-width="2"/><path d="M162.59 38.382a74756.24 74756.24 0 00-7.222-7.495h-47.345" fill="none" stroke="#cbab60" stroke-width="2" stroke-linejoin="round" stroke-miterlimit="1.5"/><path d="M15.401 11.542a2.801 2.801 0 00-3.959-.074 2.801 2.801 0 003.886 4.033 2.802 2.802 0 00.073-3.959z" fill="none" stroke="#cbab60" stroke-width="2"/><circle cx="72.694" cy="22.996" r="2.8" fill="none" stroke="#cbab60" stroke-width="2"/><path d="M15.328 15.501l7.222 7.495h47.344" fill="none" stroke="#cbab60" stroke-width="2" stroke-linejoin="round" stroke-miterlimit="1.5"/><path d="M83.258 22.996v15.781M94.609 30.887v7.89" fill="none" stroke="gray" stroke-width="2" stroke-linejoin="round" stroke-miterlimit="1.5"/><path d="M80.28 57.605c0 4.392 3.886 7.953 8.679 7.953s8.678-3.561 8.678-7.953H80.28zm-3.108-12.623h3.108v12.623h17.357V44.982h3.109a.678.678 0 00.677-.678v-2.623a.678.678 0 00-.677-.678H77.172a.679.679 0 00-.678.678v2.623c0 .374.304.678.678.678z" fill="#959595" id="led-color"/><path d="M91.959 53.612l-3 6-3-6h6z" fill="#fff"/><path d="M88.959 46.95v7.862" fill="none" stroke="#fff" stroke-width="2" stroke-linejoin="round" stroke-miterlimit="1.5"/></svg>
+
+            <svg id="scroll-down-btn" viewBox="0 0 178 69" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd"
+                clip-rule="evenodd" stroke-linecap="round" stroke-miterlimit="10">
+                <path
+                    d="M162.517 42.341a2.8 2.8 0 104.032-3.887 2.8 2.8 0 00-4.032 3.887zM105.223 33.687a2.801 2.801 0 112.8-2.8c0 1.545-1.254 2.8-2.8 2.8z"
+                    fill="none" stroke="#cbab60" stroke-width="2" />
+                <path d="M162.59 38.382a74756.24 74756.24 0 00-7.222-7.495h-47.345" fill="none" stroke="#cbab60"
+                    stroke-width="2" stroke-linejoin="round" stroke-miterlimit="1.5" />
+                <path
+                    d="M15.401 11.542a2.801 2.801 0 00-3.959-.074 2.801 2.801 0 003.886 4.033 2.802 2.802 0 00.073-3.959z"
+                    fill="none" stroke="#cbab60" stroke-width="2" />
+                <circle cx="72.694" cy="22.996" r="2.8" fill="none" stroke="#cbab60" stroke-width="2" />
+                <path d="M15.328 15.501l7.222 7.495h47.344" fill="none" stroke="#cbab60" stroke-width="2"
+                    stroke-linejoin="round" stroke-miterlimit="1.5" />
+                <path d="M83.258 22.996v15.781M94.609 30.887v7.89" fill="none" stroke="gray" stroke-width="2"
+                    stroke-linejoin="round" stroke-miterlimit="1.5" />
+                <path
+                    d="M80.28 57.605c0 4.392 3.886 7.953 8.679 7.953s8.678-3.561 8.678-7.953H80.28zm-3.108-12.623h3.108v12.623h17.357V44.982h3.109a.678.678 0 00.677-.678v-2.623a.678.678 0 00-.677-.678H77.172a.679.679 0 00-.678.678v2.623c0 .374.304.678.678.678z"
+                    fill="#959595" id="led-color" />
+                <path d="M91.959 53.612l-3 6-3-6h6z" fill="#fff" />
+                <path d="M88.959 46.95v7.862" fill="none" stroke="#fff" stroke-width="2" stroke-linejoin="round"
+                    stroke-miterlimit="1.5" /></svg>
         </div>
     </header>
 
     <section class="features">
+        <h3>Domaines d'expertise</h3>
         <div class="container">
             <article>
                 <div class="features_circleimg features-1"></div>
                 <div class="features_body">
                     <h2>Schématique</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a, impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo enim dolore temporibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
+                        impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
+                        enim dolore temporibus.</p>
                 </div>
+                <ul class="tags">
+                    <li>KiCad Eeschema</li>
+                    <li>EAGLE</li>
+                    <li>Altium CircuitStudio</li>
+                </ul>
             </article>
             <article>
                 <div class="features_circleimg features-2"></div>
                 <div class="features_body">
                     <h2>Routage</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a, impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo enim dolore temporibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
+                        impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
+                        enim dolore temporibus.</p>
                 </div>
+                <ul class="tags">
+                    <li>KiCad PcbNew</li>
+                    <li>EAGLE</li>
+                    <li>Altium CircuitStudio</li>
+                </ul>
             </article>
             <article>
-                <div class="features_circleimg features-2"></div>
+                <div class="features_circleimg features-3"></div>
                 <div class="features_body">
                     <h2>Fabrication et assemblage</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a, impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo enim dolore temporibus.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
+                        impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
+                        enim dolore temporibus.</p>
                 </div>
+                <ul class="tags">
+                    <li>FR4 2-6 couches</li>
+                    <li>Ro4350B</li>
+                </ul>
+            </article>
+            <article>
+                <div class="features_circleimg features-4"></div>
+                <div class="features_body">
+                    <h2>Logiciel embarqué</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
+                        impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
+                        enim dolore temporibus.</p>
+                </div>
+                <ul class="tags">
+                    <li>C</li>
+                    <li>FreeRTOS Real-Time OS</li>
+                    <li>Node.js</li>
+                    <li>Embedded Javascript</li>
+                </ul>
             </article>
         </div>
     </section>
 
-    <footer>
+    <section class="technologies">
+        <h3>Technologies</h3>
 
+        <div class="container">
+            <div class="technologies-cards">
+                <div class="technologies-card">
+                    <div class="technologies-card_icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path
+                                d="M503.393 161.684a8.084 8.084 0 008.084-8.084V56.752c0-15.629-12.716-28.346-28.346-28.346H469.44V8.084A8.083 8.083 0 00461.356 0h-178.93a8.084 8.084 0 00-8.084 8.084v20.322H28.869C13.24 28.406.523 41.122.523 56.752v426.9C.523 499.284 13.24 512 28.869 512h454.26c15.631 0 28.346-12.716 28.346-28.346v-305.1a8.083 8.083 0 00-8.084-8.084 8.084 8.084 0 00-8.084 8.084v305.099c0 6.715-5.463 12.178-12.178 12.178H28.869c-6.714 0-12.178-5.463-12.178-12.178v-31.016h20.322a8.084 8.084 0 008.084-8.084V315.206a8.084 8.084 0 00-8.084-8.084H16.691v-42.206h20.322a8.084 8.084 0 008.084-8.084V77.9a8.084 8.084 0 00-8.084-8.084H16.691V56.752c0-6.714 5.463-12.178 12.178-12.178H483.13c6.714 0 12.178 5.463 12.178 12.178V153.6a8.084 8.084 0 008.085 8.084zM28.929 323.29v113.179H16.691V323.29h12.238zm0-237.305v162.762H16.691V85.985h12.238zm424.342-57.579H290.509V16.168h162.762v12.238z" />
+                            <path
+                                d="M469.439 77.901a8.083 8.083 0 00-8.084-8.084h-178.93a8.084 8.084 0 00-8.084 8.084v178.93a8.083 8.083 0 008.084 8.084h178.93a8.084 8.084 0 008.084-8.084V77.901zm-16.168 170.846H290.509V85.985h162.762v162.762z" />
+                            <path
+                                d="M300.412 193.437a8.084 8.084 0 008.084 8.084h10.576v10.577a8.084 8.084 0 008.084 8.084h9.701v9.701a8.083 8.083 0 008.084 8.084 8.084 8.084 0 008.084-8.084v-9.701h10.779v9.701a8.083 8.083 0 008.084 8.084 8.084 8.084 0 008.084-8.084v-9.701h10.779v9.701a8.083 8.083 0 008.084 8.084 8.084 8.084 0 008.084-8.084v-9.701h9.701a8.084 8.084 0 008.084-8.084v-10.577h10.577c4.466 0 8.084-3.62 8.084-8.084s-3.618-8.084-8.084-8.084h-10.577v-10.779h10.577a8.084 8.084 0 008.084-8.084 8.083 8.083 0 00-8.084-8.084h-10.577v-10.779h10.577a8.084 8.084 0 008.084-8.084 8.083 8.083 0 00-8.084-8.084h-10.577v-8.826a8.084 8.084 0 00-8.084-8.084h-9.701v-11.45a8.083 8.083 0 00-8.084-8.084 8.084 8.084 0 00-8.084 8.084v11.452h-10.779v-11.452a8.083 8.083 0 00-8.084-8.084 8.084 8.084 0 00-8.084 8.084v11.452h-10.779v-11.452a8.084 8.084 0 00-8.084-8.084 8.084 8.084 0 00-8.084 8.084v11.452h-9.701a8.084 8.084 0 00-8.084 8.084v8.826h-10.576a8.084 8.084 0 00-8.084 8.084 8.084 8.084 0 008.084 8.084h10.576v10.779h-10.576a8.084 8.084 0 00-8.084 8.084 8.084 8.084 0 008.084 8.084h10.576v10.779h-10.576v-.001a8.082 8.082 0 00-8.084 8.083zm34.829-62.72h73.297v73.297h-73.297v-73.297zM461.355 368.561a8.084 8.084 0 008.084-8.084v-45.272a8.083 8.083 0 00-8.084-8.084h-24.53v-8.382a8.083 8.083 0 00-8.084-8.084 8.084 8.084 0 00-8.084 8.084v8.382H238.231a8.084 8.084 0 000 16.168h182.426v29.103H176.528V323.29h36.91a8.084 8.084 0 000-16.168h-36.91v-8.382a8.084 8.084 0 00-16.168 0v8.382h-24.529a8.084 8.084 0 00-8.084 8.084v45.272a8.084 8.084 0 008.084 8.084h24.529v22.636h-24.529a8.084 8.084 0 00-8.084 8.084v45.272a8.084 8.084 0 008.084 8.084h24.529v7.778a8.084 8.084 0 0016.168 0v-7.778h182.427a8.084 8.084 0 008.084-8.084 8.084 8.084 0 00-8.084-8.084H176.528v-29.103h244.129v29.103h-36.91a8.084 8.084 0 00-8.084 8.084 8.083 8.083 0 008.084 8.084h36.91v7.778a8.083 8.083 0 008.084 8.084 8.084 8.084 0 008.084-8.084v-7.778h24.53a8.084 8.084 0 008.084-8.084v-45.272a8.084 8.084 0 00-8.084-8.084h-24.53v-22.636h24.53zm-24.53-45.271h16.445v29.103h-16.445V323.29zM160.359 436.469h-16.444v-29.103h16.444v29.103zm0-84.076h-16.444V323.29h16.444v29.103zm260.298 38.804H176.528v-22.636h244.129v22.636zm16.168 16.169h16.445v29.103h-16.445v-29.103zM139.603 256.831a8.084 8.084 0 0016.168 0v-144.55a8.084 8.084 0 00-16.168 0v144.55zM147.688 97.011a8.084 8.084 0 008.084-8.084V77.901a8.084 8.084 0 00-16.168 0v11.026a8.084 8.084 0 008.084 8.084zM204.342 256.831a8.084 8.084 0 0016.168 0v-144.55a8.084 8.084 0 00-16.168 0v144.55zM212.426 97.011a8.084 8.084 0 008.084-8.084V77.901a8.084 8.084 0 00-16.168 0v11.026a8.084 8.084 0 008.084 8.084zM180.057 230.535a8.084 8.084 0 008.084-8.084V77.901a8.084 8.084 0 00-16.168 0v144.55a8.084 8.084 0 008.084 8.084zM171.973 256.831a8.084 8.084 0 0016.168 0v-11.026a8.084 8.084 0 00-16.168 0v11.026zM244.795 230.535a8.084 8.084 0 008.084-8.084V77.901a8.084 8.084 0 00-16.168 0v144.55a8.085 8.085 0 008.084 8.084zM236.711 256.831a8.084 8.084 0 0016.168 0v-11.026a8.084 8.084 0 00-16.168 0v11.026z" />
+                            <path
+                                d="M371.89 142.596c-13.175 0-23.894 10.719-23.894 23.894 0 13.175 10.719 23.894 23.894 23.894 13.175 0 23.893-10.719 23.893-23.894-.001-13.176-10.718-23.894-23.893-23.894zm0 31.62c-4.26 0-7.725-3.465-7.725-7.725s3.465-7.725 7.725-7.725c4.259 0 7.724 3.465 7.724 7.725 0 4.259-3.465 7.725-7.724 7.725z" />
+                            </svg>
+                    </div>
+                    <div class="technologies-card_inside">
+                        <h4>Platformes</h4>
+                        <ul>
+                            <li>Raspberry Pi</li>
+                            <li>BeagleBone</li>
+                            <li>Arduino</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="technologies-card">
+                    <div class="technologies-card_icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path
+                                d="M204.8 256c-28.228 0-51.2 22.972-51.2 51.2s22.972 51.2 51.2 51.2 51.2-22.972 51.2-51.2-22.972-51.2-51.2-51.2zm0 76.8c-14.14 0-25.6-11.46-25.6-25.6s11.46-25.6 25.6-25.6 25.6 11.46 25.6 25.6-11.46 25.6-25.6 25.6z" />
+                            <path
+                                d="M204.8 204.8v25.6c42.419 0 76.8 34.381 76.8 76.8h25.6c0-56.465-45.935-102.4-102.4-102.4z" />
+                            <path
+                                d="M204.8 153.6v25.6c70.69 0 128 57.31 128 128h25.6c0-84.693-68.907-153.6-153.6-153.6z" />
+                            <path
+                                d="M204.8 102.4V128c98.97 0 179.2 80.23 179.2 179.2h25.6c0-112.93-91.87-204.8-204.8-204.8z" />
+                            <path
+                                d="M256 0C114.62 0 0 114.62 0 256s114.62 256 256 256 256-114.62 256-256S397.38 0 256 0zm0 486.4C128.956 486.4 25.6 383.044 25.6 256S128.956 25.6 256 25.6 486.4 128.956 486.4 256 383.044 486.4 256 486.4z" />
+                            </svg>
+                    </div>
+                    <div class="technologies-card_inside">
+                        <h4>Sans-fil & IoT</h4>
+                        <ul>
+                            <li>Bluetooth/BLE</li>
+                            <li>WiFi 802.11</li>
+                            <li>LoRa</li>
+                            <li>GSM/4G</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="technologies-card">
+                    <div class="technologies-card_icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path
+                                d="M169.795 0v133.224h15.674V15.673H326.53v117.551h15.674V0zM143.673 146.286v155.979c0 5.51 1.573 10.874 4.547 15.514l32.321 50.389c5.007 7.805 13.332 12.64 22.511 13.168l20.914 73.195h8.523V512h47.02v-57.469h8.523l20.914-73.195c9.178-.528 17.504-5.362 22.51-13.168l32.323-50.389a28.68 28.68 0 004.547-15.514V146.286H143.673zm120.163 350.041h-15.673v-41.796h15.673v41.796zm12.375-57.47h-40.423l-16.419-57.469h73.261l-16.419 57.469zm74.375-129.54l-32.323 50.389a13.004 13.004 0 01-10.993 6.009H204.726c-4.47 0-8.58-2.247-10.993-6.009l-32.321-50.388a13.043 13.043 0 01-2.068-7.052V161.959H352.65v140.306h.002a13.04 13.04 0 01-2.066 7.052z" />
+                            <path
+                                d="M197.485 59.854v52.245h52.245V59.854h-52.245zm36.572 36.571h-20.898V75.527h20.898v20.898zM262.269 59.854v52.245h52.245V59.854h-52.245zm36.571 36.571h-20.898V75.527h20.898v20.898zM177.632 263.607h156.735v15.673H177.632zM190.693 294.954h130.612v15.673H190.693zM203.755 326.301h104.49v15.673h-104.49z" />
+                            </svg>
+                    </div>
+                    <div class="technologies-card_inside">
+                        <h4>Filaire</h4>
+                        <ul>
+                            <li>RS485 /RS232</li>
+                            <li>Ethernet TCP/UDP</li>
+                            <li>USB natif & FTDI</li>
+                            <li>CAN protocol</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="more">
+        <h3>Autres services</h3>
+        <div class="container">
+            Full-stack web development
+        </div>
+    </section>
+
+
+    <footer>
+        <div class="container">
+
+        </div>
     </footer>
 
     <script src="main.js"></script>
 </body>
+
 </html>
