+ Add "More services" / Finished Technologies section on all screens

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img class="intro_image" src="assets/bg-home.svg" alt="circuit">
                 <div class="intro_text">
                     <h2>Conception et Réalisation Electronique</h2>
-                    <p>De l'électronique jusqu'au prototypage. L'accompagnement du projet de A à Z.</p>
+                    <p class="subtitle">Depuis une idée vers le prototypage. L'esprit Low-Tech au coeur du développement.</p>
                 </div>
             </section>
 
@@ -50,14 +50,15 @@
                     d="M80.28 57.605c0 4.392 3.886 7.953 8.679 7.953s8.678-3.561 8.678-7.953H80.28zm-3.108-12.623h3.108v12.623h17.357V44.982h3.109a.678.678 0 00.677-.678v-2.623a.678.678 0 00-.677-.678H77.172a.679.679 0 00-.678.678v2.623c0 .374.304.678.678.678z"
                     fill="#959595" id="led-color" />
                 <path d="M91.959 53.612l-3 6-3-6h6z" fill="#fff" />
-                <path d="M88.959 46.95v7.862" fill="none" stroke="#fff" stroke-width="2" stroke-linejoin="round"
-                    stroke-miterlimit="1.5" /></svg>
+                <path d="M88.959 46.95v7.862" fill="none" stroke="#fff" stroke-width="2" stroke-linejoin="round" stroke-miterlimit="1.5" />
+            </svg>
         </div>
     </header>
 
     <section class="features">
-        <h3>Domaines d'expertise</h3>
         <div class="container">
+            <h3>Domaines d'expertise</h3>
+            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'un idée. L'esprit Low-Tech est au centre de mes développement, où l'on doit faire en sorte que la réalisation soit utile, durable et accessible</p>
             <article>
                 <div class="features_circleimg features-1"></div>
                 <div class="features_body">
@@ -90,9 +91,7 @@
                 <div class="features_circleimg features-3"></div>
                 <div class="features_body">
                     <h2>Fabrication et assemblage</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
-                        impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
-                        enim dolore temporibus.</p>
+                    <p>Gestion de la fabrication et de l'assemblage des PCB avec approvisionnement composants. Assemblage ou retouches manuelles possibles jusqu'aux boitiers QFN/DFN</p>
                 </div>
                 <ul class="tags">
                     <li>FR4 2-6 couches</li>
@@ -103,9 +102,7 @@
                 <div class="features_circleimg features-4"></div>
                 <div class="features_body">
                     <h2>Logiciel embarqué</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
-                        impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
-                        enim dolore temporibus.</p>
+                    <p>Implémentation logiciel embarqué avec OS Temp réel pour cible microcontrolleur directe ou sur environnement linux. </p>
                 </div>
                 <ul class="tags">
                     <li>C</li>
@@ -118,9 +115,9 @@
     </section>
 
     <section class="technologies">
-        <h3>Technologies</h3>
-
         <div class="container">
+            <h3>Technologies</h3>
+            <p class="subtitle">Les platformes sont souvent les solutions à faible coût qui contiennent déjà un certain nombre de technologies embarguées. Elle permettent souvent un prototypage rapide et efficace.</p>
             <div class="technologies-cards">
                 <div class="technologies-card">
                     <div class="technologies-card_icon">
@@ -141,6 +138,8 @@
                             <li>Raspberry Pi</li>
                             <li>BeagleBone</li>
                             <li>Arduino</li>
+                            <li>STM32 Nucleo</li>
+                            <li>Espruino</li>
                         </ul>
                     </div>
                 </div>
@@ -178,7 +177,7 @@
                                 d="M169.795 0v133.224h15.674V15.673H326.53v117.551h15.674V0zM143.673 146.286v155.979c0 5.51 1.573 10.874 4.547 15.514l32.321 50.389c5.007 7.805 13.332 12.64 22.511 13.168l20.914 73.195h8.523V512h47.02v-57.469h8.523l20.914-73.195c9.178-.528 17.504-5.362 22.51-13.168l32.323-50.389a28.68 28.68 0 004.547-15.514V146.286H143.673zm120.163 350.041h-15.673v-41.796h15.673v41.796zm12.375-57.47h-40.423l-16.419-57.469h73.261l-16.419 57.469zm74.375-129.54l-32.323 50.389a13.004 13.004 0 01-10.993 6.009H204.726c-4.47 0-8.58-2.247-10.993-6.009l-32.321-50.388a13.043 13.043 0 01-2.068-7.052V161.959H352.65v140.306h.002a13.04 13.04 0 01-2.066 7.052z" />
                             <path
                                 d="M197.485 59.854v52.245h52.245V59.854h-52.245zm36.572 36.571h-20.898V75.527h20.898v20.898zM262.269 59.854v52.245h52.245V59.854h-52.245zm36.571 36.571h-20.898V75.527h20.898v20.898zM177.632 263.607h156.735v15.673H177.632zM190.693 294.954h130.612v15.673H190.693zM203.755 326.301h104.49v15.673h-104.49z" />
-                            </svg>
+                        </svg>
                     </div>
                     <div class="technologies-card_inside">
                         <h4>Filaire</h4>
@@ -196,10 +195,24 @@
     </section>
 
     <section class="more">
-        <h3>Autres services</h3>
         <div class="container">
-            Full-stack web development
-        </div>
+            <h3>Autres services</h3>
+            <p class="subtitle">Le but est d'avoir une vision large sur le developpement d'un produit, ainsi dans la continuité du développement d'un produit, il est possible d'avoir recours à différents besoins. J'offre ainsi mes services sur les potentiels besoins suivants: </p>
+            <div class="container">
+                <div class="more-services">
+                    <ul>
+                        <li class="active-service">Developpement web Full-stack</li>
+                        <li>Modélisation & Impression 3D</li>
+                    </ul>
+                </div>
+                <div class="more-services__content">
+                    <div class="more-services_image">
+                        <img src="assets/more/more_website.svg" alt="service">
+                    </div>
+                    <div class="more-services_text"></div>
+                </div>
+            </div>
+        </div>    
     </section>
 
 
