/ improve "more services" section -- need to do Fade in/out on content / Update images in "Expertise"

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <img class="intro_image" src="assets/bg-home.svg" alt="circuit">
                 <div class="intro_text">
                     <h2>Conception et Réalisation Electronique</h2>
-                    <p class="subtitle">Depuis une idée vers le prototypage. L'esprit Low-Tech au coeur du développement.</p>
+                    <p class="subtitle">Un accompagnement technologique complet. L'esprit Low-Tech au coeur du développement.</p>
                 </div>
             </section>
 
@@ -58,31 +58,32 @@
     <section class="features">
         <div class="container">
             <h3>Domaines d'expertise</h3>
-            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'un idée. L'esprit Low-Tech est au centre de mes développement, où l'on doit faire en sorte que la réalisation soit utile, durable et accessible</p>
+            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'une idée. L'esprit Low-Tech est au centre de mes développements, où l'on doit faire en sorte que la réalisation soit utile, durable et accessible</p>
             <article>
                 <div class="features_circleimg features-1"></div>
                 <div class="features_body">
-                    <h2>Schématique</h2>
+                    <h3>Choix technologiques</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
                         impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
                         enim dolore temporibus.</p>
                 </div>
                 <ul class="tags">
-                    <li>KiCad Eeschema</li>
-                    <li>EAGLE</li>
-                    <li>Altium CircuitStudio</li>
+                    <li>Composants</li>
+                    <li>Energie</li>
+                    <li>Connectivité</li>
+                    <li>Pérennité</li>
                 </ul>
             </article>
             <article>
                 <div class="features_circleimg features-2"></div>
                 <div class="features_body">
-                    <h2>Routage</h2>
+                    <h3>Schemas & Routage</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
                         impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
                         enim dolore temporibus.</p>
                 </div>
                 <ul class="tags">
-                    <li>KiCad PcbNew</li>
+                    <li>KiCad</li>
                     <li>EAGLE</li>
                     <li>Altium CircuitStudio</li>
                 </ul>
@@ -90,7 +91,7 @@
             <article>
                 <div class="features_circleimg features-3"></div>
                 <div class="features_body">
-                    <h2>Fabrication et assemblage</h2>
+                    <h3>Fabrication et assemblage</h3>
                     <p>Gestion de la fabrication et de l'assemblage des PCB avec approvisionnement composants. Assemblage ou retouches manuelles possibles jusqu'aux boitiers QFN/DFN</p>
                 </div>
                 <ul class="tags">
@@ -101,7 +102,7 @@
             <article>
                 <div class="features_circleimg features-4"></div>
                 <div class="features_body">
-                    <h2>Logiciel embarqué</h2>
+                    <h3>Logiciel embarqué</h3>
                     <p>Implémentation logiciel embarqué avec OS Temp réel pour cible microcontrolleur directe ou sur environnement linux. </p>
                 </div>
                 <ul class="tags">
@@ -197,28 +198,33 @@
     <section class="more">
         <div class="container">
             <h3>Autres services</h3>
-            <p class="subtitle">Le but est d'avoir une vision large sur le developpement d'un produit, ainsi dans la continuité du développement d'un produit, il est possible d'avoir recours à différents besoins. J'offre ainsi mes services sur les potentiels besoins suivants: </p>
-            <div class="container">
-                <div class="more-services">
-                    <ul>
-                        <li class="active-service">Developpement web Full-stack</li>
-                        <li>Modélisation & Impression 3D</li>
-                    </ul>
+            <p class="subtitle">Le but est d'avoir une vision large sur le developpement d'un produit, ainsi dans la continuité du développement d'un produit, il est possible d'avoir recours à différents besoins. Je propose ainsi mes services sur les potentiels besoins suivants: </p>
+           
+            <div class="more-services__selectors">
+                <ul>
+                    <li class="active-service">Developpement Web Full-Stack</li>
+                    <li>Modélisation & Impression 3D</li>
+                </ul>
+            </div>
+            <div class="more-services__content">
+                <div class="more-services__image">
+                    <img src="assets/more/more_website.svg" alt="service">
                 </div>
-                <div class="more-services__content">
-                    <div class="more-services_image">
-                        <img src="assets/more/more_website.svg" alt="service">
-                    </div>
-                    <div class="more-services_text"></div>
+                <div class="more-services__text">
+                    <h4 class="more-services__heading">Ecoconception Web</h4>
+                    <p class="more-services__details">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem adipisci fuga amet nostrum? Fugiat quaerat ut maiores quasi quia eius consequuntur sed dolorem, aliquam fugit sit libero molestias quae vitae!</p>
+                    <a href="" class="btn_info">En savoir plus</a>
                 </div>
             </div>
+            
         </div>    
     </section>
 
 
     <footer>
         <div class="container">
-
+            <h1>Marc Z.</h1>
+            <p class="copyright">© Copyrights Marc Zetek. Tous droits réservés</p>
         </div>
     </footer>
 
