/ "Expertise" on Desktop with reverse columns every 2 articles

--- a/index.html
+++ b/index.html
@@ -62,22 +62,20 @@
             <article>
                 <div class="features_circleimg features-1"></div>
                 <div class="features_body">
-                    <h3>Choix technologiques</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
-                        impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
-                        enim dolore temporibus.</p>
+                    <h4>Choix technologiques</h4>
+                    <p>C'est sans doute l'étape la plus importante d'un projet électronique. Cela définit la finalité fonctionnelle du projet/produit, mais pas seulement. L'étude de l'obsolescence des composants est considérée comme tout aussi importante, afin d'assurer la pérennité de la réalisation.</p>
                 </div>
                 <ul class="tags">
                     <li>Composants</li>
                     <li>Energie</li>
                     <li>Connectivité</li>
-                    <li>Pérennité</li>
+                    <li>Durable</li>
                 </ul>
             </article>
             <article>
                 <div class="features_circleimg features-2"></div>
                 <div class="features_body">
-                    <h3>Schemas & Routage</h3>
+                    <h4>Schemas & Routage</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sequi blanditiis sint eaque a,
                         impedit quia illo at assumenda quam aliquam? Accusantium esse repellat fugit omnis. Explicabo
                         enim dolore temporibus.</p>
@@ -91,7 +89,7 @@
             <article>
                 <div class="features_circleimg features-3"></div>
                 <div class="features_body">
-                    <h3>Fabrication et assemblage</h3>
+                    <h4>Fabrication et assemblage</h4>
                     <p>Gestion de la fabrication et de l'assemblage des PCB avec approvisionnement composants. Assemblage ou retouches manuelles possibles jusqu'aux boitiers QFN/DFN</p>
                 </div>
                 <ul class="tags">
@@ -102,7 +100,7 @@
             <article>
                 <div class="features_circleimg features-4"></div>
                 <div class="features_body">
-                    <h3>Logiciel embarqué</h3>
+                    <h4>Logiciel embarqué</h4>
                     <p>Implémentation logiciel embarqué avec OS Temp réel pour cible microcontrolleur directe ou sur environnement linux. </p>
                 </div>
                 <ul class="tags">
