+ Add Desktop app in "more services" section + Add fixed nav on scroll

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="sine-wave">
         <div class="container">
-            <nav>
+            <nav class="active">
                 <h1>Marc Z.</h1>
 
                 <ul class="nav-link">
@@ -86,7 +86,7 @@
     <section id="features">
         <div class="container">
             <h3>Domaines d'expertise</h3>
-            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'une idée. Le Low-Tech est au centre de mes développements, où l'on doit faire en sorte que la réalisation soit utile, durable et accessible</p>
+            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'une idée. Le Low-Tech est au centre de mes développements, où la réalisation doit être utile, durable et accessible.</p>
             <article>
                 <div class="features_circleimg features-1"></div>
                 <div class="features_body">
@@ -222,12 +222,13 @@
     <section id="more" class="more">
         <div class="container">
             <h3>Autres compétences</h3>
-            <p class="subtitle">Le but est d'avoir une vision large sur le developpement d'un produit, ainsi dans la continuité du développement d'un produit, il est possible d'avoir recours à différents besoins. Je propose ainsi de vous accompagner dans les développements suivants:</p>
+            <p class="subtitle">Le but est d'avoir une vision large sur le developpement d'un produit, ainsi dans la continuité du développement d'un produit, il est possible d'avoir recours à différents besoins. Je propose ainsi de vous accompagner dans les développements suivants :</p>
            
             <div class="more-services__selectors">
                 <ul>
-                    <li class="active-service">Developpement Web Full-Stack</li>
-                    <li>Modélisation & Impression 3D</li>
+                    <li class="active-service">Développement Web</li>
+                    <li>CAO & Impression 3D</li>
+                    <li>Application de bureau</li>
                 </ul>
             </div>
             <div class="more-services__content">
