+ htaccess + local fonts + update intro margin for mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="sine-wave">
         <div class="container">
-            <nav class="active">
+            <nav>
                 <h1>Marc Z.</h1>
 
                 <ul class="nav-link">
@@ -90,7 +90,7 @@
     <section id="features">
         <div class="container">
             <h3>Domaines d'expertise</h3>
-            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'une idée. Je suis un adepte de l'esprit Low-Tech où la réalisation se doit d'être utile, durable et accessible.</p>
+            <p class="subtitle">Qu'il s'agisse d'un produit ou simplement d'une idée. Je m'interesse beaucoup à l'esprit Low-Tech où la réalisation se doit d'être utile, durable et accessible.</p>
             <article>
                 <div class="features_circleimg features-1"></div>
                 <div class="features_body">
@@ -274,7 +274,7 @@
                 </div>
                 <div class="accordion">
                     <div class="question">
-                        <p class="question_content">Un ingénieur électronicien dans le web ? 🤔</p>
+                        <p class="question_content">Un électronicien aussi créateur web ? 🤔</p>
                         <svg class="question_arrow" xmlns="http://www.w3.org/2000/svg" width="18" height="12"><path fill="none" stroke="#fff" stroke-width="3" d="M1 1l8 8 8-8" class="question_arrow_path"></path></svg>
                     </div>
                     <div class="answer">
@@ -319,7 +319,7 @@
                 </ul>
             </div>
             
-            <p class="copyright">© Copyrights Marc Z. Tous droits réservés. Illustrations par <a href="https://undraw.co/illustrations" target="_blank">unDraw</a></p>
+            <p class="copyright">© Copyrights Marc Zetek. Tous droits réservés. Illustrations par <a href="https://undraw.co/illustrations" target="_blank">unDraw</a></p>
         </div>
     </footer>
 
