+ add print css / Correction on favicon link / resize JPG and PNG images

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="assets/favicon_io/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
 
-    <link rel="stylesheet" href="style-min.css">
+    <link rel="stylesheet" media="screen" href="style-min.css">
+    <link rel="stylesheet" media="print" href="style-min.css" />
 
-    <title>Marc Z. -- Ingénieur polyvalent</title>
+    <title>Marc Zetek -- Ingénieur polyvalent</title>
     <meta name="description"
         content="Accompagnement technologique sur mesure. Conception électronique, réalisation de sites et application web, développement logiciel.">
 </head>
@@ -240,7 +241,7 @@
                     <img src="assets/more/more_website.svg" alt="service">
                 </div>
                 <div class="more-services__text">
-                    <h4 class="more-services__heading">Ecoconception Web</h4>
+                    <h4 class="more-services__heading">Création Web</h4>
                     <p class="more-services__details">Pour votre entreprise, pour mettre en avant un produit, ou encore pour créer une application basée sur le web. Un site réalisé en respectant les règles d'écoconception primordiales à la limitation des données dans l'internet.</p>
                     <a href="https://bit.ly/3tFQLr6" class="btn_info more-services__btn" target="_blank">En savoir plus</a>
                 </div>
